[package]
name = "ant-keygen"
version = "0.1.0"
edition = "2021"
description = "ML-DSA-65 key management utility for Autonomi release signing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WithAutonomi/ant-keygen"
keywords = ["post-quantum", "signing", "ml-dsa", "release"]
categories = ["cryptography", "command-line-utilities"]
rust-version = "1.75"

[dependencies]
saorsa-pqc = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
